test/Fail/ExplicitPolarityVsPragma.err
ExplicitPolarityVsPragma.agda:5.11-34: error: [ExplicitPolarityVsPragma]
Polarity pragma used for f but its type is already annotated with
polarities.
